; ModuleID = '/home/carl/AnghaBench/vlc/modules/stream_out/extr_smem.c_AudioPrerenderDefaultCallback.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/stream_out/extr_smem.c_AudioPrerenderDefaultCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AudioPrerenderDefaultCallback(i8* %0, i32** %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = ptrtoint i8* %7 to i64
  %9 = call i32 @VLC_UNUSED(i64 %8)
  %10 = load i32**, i32*** %5, align 8
  %11 = ptrtoint i32** %10 to i64
  %12 = call i32 @VLC_UNUSED(i64 %11)
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @VLC_UNUSED(i64 %13)
  ret void
}

declare dso_local i32 @VLC_UNUSED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
